Revamped code. Now accepts direct MusicXML input and prints multiple instruments.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
-.matrix {
-    width:200px;
+.matrixContainer {
+    border: 2px solid #777;
 }
 
+.blankRow {
+    height: 50px;
+}
 
 .matrixHighlights {
     /* So that we don't get spurious mouseLeave events when a highlight rect
