--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
 .matrixContainer {
-    border: 2px solid #777;
+    border: 1px solid #777;
+}
+
+.instrumentName {
+    text-align: center;
 }
 
 .container {
     width: 100%;
     margin:0px;
+}
+
+#songName {
+    text-align: left;
+    margin-left: 50px;
 }
 
 .blankRow {
