--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-.matrixContainer {
-    border: 1px solid #777;
+.matrixContainer.cuivre {
+    border: 1px solid red;
 }
 
 .instrumentName {
@@ -15,6 +15,12 @@
     text-align: left;
     margin-left: 50px;
 }
+
+
+.cuivre .wordrect {
+    fill: red;
+}
+
 
 .blankRow {
     height: 50px;
@@ -65,3 +71,22 @@ svg.matrix {
     cursor: crosshair;
 }
 
+/*Drop down menu*/
+.dropdown {
+    display: inline-block;
+}
+
+
+.dropdown-submenu {
+    top: 0;
+    left: 100%;
+    margin-top: -1px;
+}
+
+.dropdown-submenu .dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -1px;
+}
+
+.hide
