--- a/style.css
+++ b/style.css
@@ -1,14 +1,51 @@
-.matrixContainer.cuivre {
-    border: 1px solid red;
+svg.matrixSvg {
+    border: 1px solid;
+}
+
+* {
+    font-family: 'Helvetica';
+}
+
+#matrixRowContainer {
+    margin:auto;
+    width: 100%;
+}
+
+.matrixContainer {
+    margin-left:-1px;
+}
+
+.row.content-row {
+    width:100%;
+    margin:auto;
+    border-top: 1px solid black;
+    display: flex;
+}
+
+.col-6.content-col {
+    margin-top:-1px;
+    margin-bottom:0px;
+    padding-bottom: 5em;
+    border-left: 1px solid black;
+}
+
+.col-6.empty-col {
+    display: table-cell;
+    vertical-align: top;
+    /*height:0px;
+    padding: 0px;
+    margin: 0px;*/
+}
+
+.col-6.no-border {
+    border-left: 0px;
 }
 
 .instrumentName {
-    text-align: center;
-}
-
-.container {
-    width: 100%;
-    margin:0px;
+    margin-top:1em;
+    margin-left: 1em;
+    font-size: 18px;
+    text-align: left;
 }
 
 #songName {
@@ -19,11 +56,6 @@
 
 .cuivre .wordrect {
     fill: red;
-}
-
-
-.blankRow {
-    height: 50px;
 }
 
 .matrixHighlights {
