--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
 svg.matrixSvg {
+
     border: 1px solid;
+    background-color: white;
 }
 
 * {
     font-family: 'Helvetica';
+}
+
+h2 { 
+    font-family: "Helvetica Neue"; 
+    font-size: 24px; 
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight: 700; 
+    line-height: 26.4px;
 }
 
 #matrixRowContainer {
@@ -39,6 +50,15 @@ svg.matrixSvg {
 
 .col-6.no-border {
     border-left: 0px;
+}
+
+
+#header-row {
+    border-top: 0px;
+}
+
+#header-row .content-col {
+    padding:2em;
 }
 
 .instrumentName {
@@ -103,8 +123,20 @@ svg.matrix {
     cursor: crosshair;
 }
 
+
+li.genre.grey.open a.genre {
+    background-color: #737373;
+}
+
+
+li.genre.grey a.genre {
+    background-color: #bfbfbf;
+}
+
+
+
 /*Drop down menu*/
-.dropdown {
+/*.dropdown {
     display: inline-block;
 }
 
@@ -120,3 +152,68 @@ svg.matrix {
     left: 100%;
     margin-top: -1px;
 }
+
+.dropdown-menu .grey {
+    background-color: #bfbfbf;
+}
+
+.dropdown-menu .grey:active {
+    background-color: #737373;
+}
+*/
+
+
+
+/*
+
+
+ul.dropdown-menu {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li.dropdown-menu {
+  float: left;
+}
+
+li a.dropdown-menu, .dropbtn {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a.dropdown-menu:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+li.dropdown {
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}*/
