Minor style changes

--- a/style.css
+++ b/style.css
@@ -276,6 +276,13 @@ svg.matrix {
     cursor: crosshair;
 }
 
+.genre {
+    text-transform: capitalize;
+}
+
+.year-element {
+    text-transform: none;
+}
 
 li.genre.grey.open a.genre {
     background-color: #999999;
