Minor style changes

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h2,
     padding:1em;
     position: relative;
     padding-right:0;
-    padding-bottom: 0.5em;
+    padding-bottom: 0;
 }
 
 
@@ -165,7 +165,8 @@ button,
 
 
 #description {
-    padding: 2em;
+    padding: 1em;
+    padding-bottom: 3em;
     padding-right: 0;
     margin-bottom: 1.2em;
     width:100%;
@@ -220,15 +221,12 @@ button,
     width:100%;
     margin:0.8em;
     margin-bottom: 0;
-    margin-top:2em;
+    margin-top:3em;
     display: flex;
     font-weight: 300;
     align-items: flex-end;
 }
 
-.parameters span {
-    line-height: 18px;
-}
 
 .parameters input {
     float:right;
