Changed a few things in the creation of svg elements. Download don't seem to work, don't know why or how much time it's been broken for.

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@ rect:hover {
     fill:red;
 }*/
 
+.matrixSvg .column,
+.matrixSvg .row,
+.reprect {
+    fill: transparent;
+}
 
 .matrixSvg .column,
 .matrixSvg .row {
@@ -32,13 +37,7 @@ rect:hover {
     z-index: 0;
 }
 
-
-.column, .row {
-    fill:transparent;
-    opacity: 0.2;
-}
-
-rect.column.hover, rect.row.hover {
+.matrixSvg > .column.hover, .matrixSvg > .row.hover {
     opacity: 0.2;
 }
 
