--- a/template/index2.html
+++ b/template/index2.html
@@ -127,4 +127,7 @@
 
 	</body>
 
+	<script src="../js/index.js"></script>
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
+  	<script src="../js/bootstrap-dropdownhover.min.js"></script>
 </html>
